traces/bug_346.txt
src/medit/items.c:335: error: DEAD_STORE
  The value written to &xm (type float) is never used.
Showing all 1 steps of the trace


src/medit/items.c:335:3: Write of unused value
333.     glColor3f(0.0,0.5,0.0);
334.     glLineWidth(1.0f);
335.     xm = sc->par.xs / 2.0f;
         ^
336.     ym = sc->par.ys / 2.0f;
337.     glRecti(200,160,440,320);
